# ChangeLog for app-emacs/moccur-edit
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
  +moccur-edit-2.6.ebuild, +files/60moccur-edit-gentoo.el, +metadata.xml:
  initial import from bug 180170, by MATSUYAMA Tomohiro
  <matsuyama@ariel-networks.com>
