@@ -1,5 +1,7 @@
-AUX 60moccur-edit-gentoo.el 103 RMD160 3f27d8d3047bc58c82316bfe3285da2fe3161ce8 SHA1 0f37078d092db9192896c2ee48298bbaac7c2da0 SHA256 6eca089b44027897c424b32b919d0f8c81b37cf6600ad9465b4617badc644949
+AUX 60moccur-edit-gentoo.el 138 RMD160 3d3410cad0689263b71e5ea449baff7bd64be13f SHA1 bdccb8b79be958cff27a60a791b70b85d54f77d7 SHA256 da63e892bddaf25ffaf7279762ab5b8c171dfbf0c99495c0a9d0aa68d650bac4
 DIST moccur-edit-2.6.el.bz2 3874 RMD160 3c8fbf4c1e306e5a32ea1d8a115fce20321d18af SHA1 7a6579bda7ae551236d385e4c0a682af84d34849 SHA256 259ee22dfd80a2dfaad8f2a6ba6a7cca840a9a1a80c810e3d9b92c6dc6e6c8e5
+DIST moccur-edit-2.9.el.bz2 4010 RMD160 f7780a991a489c3f86f98fdc2a6cd93ff2eaeda8 SHA1 39911f47196f7e5088a08382965153052e641a1c SHA256 3465422ad8aeda936f70387799cf0d02921587c0560b7321fb610b6d7611fda1
 EBUILD moccur-edit-2.6.ebuild 450 RMD160 e3efe9f199e6829a739ebce9142bc0f391cf34cf SHA1 99b6d92f6fa77277fc517a2580bee246791946f0 SHA256 378905d85dcfd8ba4832f0b54221aff0fe11a57839d3179cde3c9686883c653e
-MISC ChangeLog 341 RMD160 3e56e4d4832534b4dcc63c6c3c036d48584e8e14 SHA1 a0fe5f0af2ef6be96341ae792e8193b205661598 SHA256 771070c678d116601ad9a939b561f7cb3e3dc144c6f1ef603104ac439da38f8c
+EBUILD moccur-edit-2.9.ebuild 507 RMD160 4885b969f086cea86006b663bace11a0cf14d0b1 SHA1 8751236c0b635d4848e4af0f9b4f6edae6efe28c SHA256 b11723cf719d57fafca3db65c83d167093efe064c54c2fd16ae44ad26367bc63
+MISC ChangeLog 505 RMD160 7424f3c0caa7ce1866798c91c04627e932630294 SHA1 78b43470333a398722318c207657168485336718 SHA256 ef4a1d97de616f0d9478ebfb191b2b4aaf952ad38f219c52522eac53e732eadb
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
