@@ -2,4 +2,5 @@
 ;;; moccur-edit site-lisp configuration
 
 (add-to-list 'load-path "@SITELISP@")
-(require 'moccur-edit)
+(eval-after-load "color-moccur"
+  (require 'moccur-edit))
