@@ -1,0 +1,21 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+inherit elisp
+
+DESCRIPTION="An improved interface to color-moccur for editing"
+HOMEPAGE="http://www.bookshelf.jp/"
+# taken from http://www.bookshelf.jp/elc/moccur-edit.el
+SRC_URI="http://dev.gentoo.org/~ulm/distfiles/${P}.el.bz2"
+
+LICENSE="GPL-3"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+RDEPEND="app-emacs/color-moccur"
+DEPEND="${RDEPEND}"
+
+SIMPLE_ELISP=t
+SITEFILE="60${PN}-gentoo.el"
